trunk/GRF Installation/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>grf01_Event_Description__c</fullName>
        <label>Event Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_Fundraising_Event_Attendance_Goal__c</fullName>
        <label>Fundraising Event Attendance Goal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grf01_Fundraising_Event_Name__c</fullName>
        <label>Fundraising Event Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grf01_Fundraising_Event_Proposed_Date__c</fullName>
        <label>Fundraising Event Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>grf01_Fundraising_Goal_Dollars__c</fullName>
        <label>Fundraising Goal (Dollars)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grf_Correspondence__c</fullName>
        <label>Correspondence</label>
        <referenceTo>Correspondence__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Fundraising_Event</fullName>
        <active>true</active>
        <businessProcess>Event</businessProcess>
        <description>Use this for a Fundraising Event</description>
        <label>Fundraising Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising_Event_Payments</fullName>
        <active>false</active>
        <businessProcess>Donations</businessProcess>
        <label>Fundraising Event Payments</label>
    </recordTypes>
</CustomObject>